--- a/Furniture Website/style.css
+++ b/Furniture Website/style.css
@@ -40,6 +40,104 @@ icons i img{
 }
 @media screen and (max-width:420px){
     .icons i img{
-        font-size:20px;
+        width:20px;
+    }
+}
+/*Main content*/
+.main-content{
+    width:100%;
+    height:90vh;
+    background-image:url(./image/Backgroundd.jpg);
+    background-size: cover;
+    background-position: 70%;
+}
+/*navbar*/
+#navbar-color{
+    background-color: rgba(238,224,208);
+}
+.navbar-nav{
+    margin:auto;
+}
+.nav-link{
+   margin-left: 30px;
+   font-weight: bold;
+   color:black; 
+   transition: 0.5s ease;
+   cursor:pointer;
+}
+.nav-link:hover{
+    color:green;
+}
+/*content*/
+.content{
+    margin-top: 150px;
+    margin-left: 60px;
+}
+.content h1{
+    font-size: 50px;
+}
+ .content .btn1 button{
+    width:150px;
+    height:32px;
+    background: transparent;
+    border: 1px solid rgb(9, 9, 9);
+    letter-spacing: 3px;
+    font-weight: bold;
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+.content  .btn1 button:hover{
+    background-color: green;
+}
+@media screen and (max-width:420px) {
+    .content h1{
+        font-size: 30px;
+    }
+    
+}
+/*card1*/
+
+#btn2 button{
+    width:100px;
+    height:30px;
+    background: transparent;
+    border: 1px solid black;
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+#btn button:hover{
+    background-color: rgba(238,224,208);
+}
+/*card2*/
+#tpc{
+    box-shadow: 0 0 5px black;
+    transition:0.5s ease;
+    cursor:pointer;
+
+}
+#toc:hover{
+    transform:translateY(-10px);
+}
+/*card-3*/
+#c p{
+    font-weight: bold;
+}
+#btn3{
+    text-align: center;
+}
+#btn3 button{
+    width:150px;
+    height: 30px;
+    background: transparent;
+    border:1px solid black;
+    transition:0.5s ease;
+    cursor: pointer;
+}
+#btn3 button:hover{
+   background-color: rgba(238,224,208); 
+}
+@media screen and (max-width:895px) {
+    #btn3 button{
+        width:100px;
     }
 }
